[Tech][Chen] init web repo

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,10 @@ typings/
 
 # next.js build output
 .next
+.idea/
+dist/
+node_modules/
+src/**/*.jsx
+tests/__coverage__/
+tests/**/*.jsx
+####### Ancestor
