--- a/package.json
+++ b/package.json
@@ -42,9 +42,6 @@
     "image-webpack-loader": "^5.0.0",
     "jest": "^24.8.0",
     "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-hot-loader": "^4.12.5",
     "tslint": "^5.18.0",
     "typescript": "^3.5.2",
     "uglifyjs-webpack-plugin": "^2.1.3",
@@ -54,5 +51,11 @@
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@material-ui/core": "^4.2.0",
+    "@material-ui/styles": "^4.2.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.12.5"
+  }
 }
