--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.2.0",
+    "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.0",
+    "hookrouter": "^1.2.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.5"
