--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/core": "^7.5.0",
     "@babel/preset-env": "^7.5.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/hookrouter": "^2.2.1",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.0.12",
     "@types/react": "^16.8.23",
