--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "hookrouter": "^1.2.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-hook-form": "^3.18.3",
     "react-hot-loader": "^4.12.5"
   }
 }
