--- a/package.json
+++ b/package.json
@@ -53,10 +53,13 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@date-io/moment": "^1.3.8",
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.1.2",
     "@material-ui/styles": "^4.2.0",
     "hookrouter": "^1.2.3",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hook-form": "^3.18.3",
