--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "image-webpack-loader": "^5.0.0",
     "jest": "^24.8.0",
     "node-sass": "^4.12.0",
+    "react-testing-library": "^8.0.1",
     "tslint": "^5.18.0",
     "typescript": "^3.5.2",
     "uglifyjs-webpack-plugin": "^2.1.3",
