--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@babel/core": "^7.5.0",
     "@babel/preset-env": "^7.5.0",
     "@babel/preset-react": "^7.0.0",
+    "@testing-library/jest-dom": "^4.0.0",
+    "@testing-library/react": "^8.0.7",
+    "@testing-library/react-hooks": "^1.1.0",
     "@types/hookrouter": "^2.2.1",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.0.12",
@@ -43,6 +46,7 @@
     "image-webpack-loader": "^5.0.0",
     "jest": "^24.8.0",
     "node-sass": "^4.12.0",
+    "react-test-renderer": "^16.8.6",
     "react-testing-library": "^8.0.1",
     "tslint": "^5.18.0",
     "typescript": "^3.5.2",
