--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@testing-library/react-hooks": "^1.1.0",
     "@types/hookrouter": "^2.2.1",
     "@types/jest": "^24.0.15",
+    "@types/lolex": "^3.1.1",
     "@types/node": "^12.0.12",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
@@ -45,6 +46,7 @@
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^5.0.0",
     "jest": "^24.8.0",
+    "lolex": "^4.1.0",
     "node-sass": "^4.12.0",
     "react-test-renderer": "^16.8.6",
     "react-testing-library": "^8.0.1",
